# aeternal

./: Cargo.toml
frontend/: package-lock.json  package.json
frontend/components/account/: index.vue
frontend/components/formatAddress/: index.vue
frontend/pages/channels/_transactions/: _id.vue
frontend/partials/contract/: index.vue
frontend/partials/oracles/oracle/: index.vue
frontend/partials/transactionDetails/: index.vue
frontend/partials/transactions/txListItem/: index.vue
frontend/partials/transactions/txListType/: oracleRespondTx.vue
frontend/store/: index.js  oracles.js  utils.js
migrations/2019-02-25-134849_contract_identifiers/: up.sql
posix_queue/: Cargo.toml
posix_queue/src/: bin.rs  lib.rs  posix_queue.erl
src/: hashing.rs  loader.rs  main.rs  models.rs  server.rs  websocket.rs
swagger/: swagger.json
