[package]
name = "posix_queue"
version = "0.1.0"
authors = ["John Newby <john@newby.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
posix_mq = "0.1.3"
posixmq = "0.2.0"
rustler = "0.20.0"
serde_json = "1.0.43"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "demo"
path = "src/bin.rs"